# APKAnalyzer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dynamic  Dockerfile.static  Dockerfile.web  LICENSE  README.classic.md  README.docker.md  README.md  analyze.sh  config.yaml  docker-compose.yml  generate_table.py  identifiers_catalog.yaml  main.py  pyproject.toml  requirements.txt  run_analyzer.bat  run_analyzer.sh  switch_readme.bat  switch_readme.sh  test_config.py
data/output/static/: Signal-8.17.4_report.html
docker/android-emulator-1-main/: docker-compose.yml
docker/android-emulator-1-main/adb-host/: Dockerfile
docker/android-emulator-1-main/android-emulator/: Dockerfile  entrypoint.sh
docker/android-emulator-1-main/proxy/: Dockerfile  squid.conf
docs/: finding_schema.md
scripts/: docker-build.bat  docker-run.bat  run_dynamic_analysis.py  switch_readme.py
src/core/: config.py
src/dynamic/: emulator_controller.py  finding_builder.py  frida_manager.py  hook_generator.py  masking.py  orchestrator.py  runner.py
src/dynamic/scripts/: hook_identifiers.js
src/models/: analysis.py
src/services/: apk_service.py
src/static/: catalog.py
src/static/detectors/: identifier_detector.py  secret_detector.py
src/static/parsers/: manifest_parser.py  permission_parser.py
src/static/reporters/: report_generator.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: main.js
src/web/templates/: index.html
tests/: test_finding_builder.py  test_hook_generator.py  test_identifier_detector.py  test_masking.py  test_orchestrator_errors.py
