[tool.poetry]
name = "apk-analyzer"
version = "0.1.0"
description = "Static APK analyzer CLI"
authors = ["APK Analyzer Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
markdown = "3.5.1"
pyyaml = "6.0.1"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
