[tool.poetry]
name = "apk-analyzer"
version = "0.1.0"
description = "Static APK analyzer CLI"
authors = ["APK Analyzer Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
markdown = "3.5.1"
pyyaml = "6.0.1"
python-dotenv = "1.0.0"
# Динамический модуль (frida 17.x должен совпадать по мажор-версии с frida-server в эмуляторе)
frida = "17.15.4"
frida-tools = "14.10.4"
# Веб-интерфейс (FastAPI + uvicorn)
fastapi = "0.111.0"
uvicorn = {version = "0.30.1", extras = ["standard"]}
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
